--- a/view/qweb_report_demo.xml
+++ b/view/qweb_report_demo.xml
@@ -1,188 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
-		<template id="custom_header">
-			<div class="header">
-				<div class="row">
-					<div class="col-md-12">
-						<div t-field="company.partner_id"
-							t-field-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'
-							style="border-bottom: 1px solid black;" />
-						<div class="col-xs-9 text-left" t-field="company.email" />
-
-
-					</div>
-					<div class="row zero_min_height">
-
-					</div>
-				</div>
-
-			</div>
-		</template>
-
-		<template id="custom_footer">
-			<div class="footer">
-				<div class="text-center" style="border-top: 1px solid black;">
-
-					<ul class="list-inline">
-						<li>Page:</li>
-						<li>
-							<span class="page" />
-						</li>
-						<li>/</li>
-						<li>
-							<span class="topage" />
-						</li>
-					</ul>
-
-				</div>
-
-			</div>
-		</template>
-
-
-		<template id="qweb_report_demo">
+		<template id="qweb_report_demo" inherit_id="sale.report_saleorder_document">
 			
-			<t t-foreach="docs" t-as="o">
-				<div class="page">
-					<div class="row">
-
-						<div class="oe_structure">
-							<div class="row">
-								<div class="col-xs-6">
-									<strong t-if="o.partner_shipping_id == o.partner_invoice_id">Invoice and shipping address:</strong>
-									<strong t-if="o.partner_shipping_id != o.partner_invoice_id">Invoice address:</strong>
-									<div t-field="o.partner_invoice_id"
-										t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}' />
-									<p t-if="o.partner_id.vat">
-										VAT:
-										<span t-field="o.partner_id.vat" />
-									</p>
-									<div t-if="o.partner_shipping_id != o.partner_invoice_id"
-										class="mt8">
-										<strong>Shipping address:</strong>
-										<div t-field="o.partner_shipping_id"
-											t-field-options='{ "fields": ["address", "name", "phone", "fax"], "no_marker": true}' />
-										<p t-if="o.partner_id.vat">
-											VAT:
-											<span t-field="o.partner_id.vat" />
-										</p>
-									</div>
-								</div>
-
-								<div class="col-xs-5 col-xs-offset-1">
-									<div t-field="o.partner_id"
-										t-field-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}' />
-								</div>
-
-							</div>
-
-							<h2>
-								<span t-if="o.state not  in ['draft','sent']">Order N° </span>
-								<span t-if="o.state  in ['draft','sent']">Quotation N° </span>
-								<span t-field="o.name" />
-							</h2>
-
-
-							<div class="row mt32 mb32" id="informations">
-								<div t-if="o.client_order_ref" class="col-xs-3">
-									<strong>Your Reference:</strong>
-									<p t-field="o.client_order_ref" />
-								</div>
-								<div t-if="o.date_order" class="col-xs-3">
-									<strong t-if="o.state not in ['draft','sent']">Date Ordered:</strong>
-									<strong t-if="o.state in ['draft','sent']">Quotation Date:</strong>
-									<p t-field="o.date_order" />
-								</div>
-								<div t-if="o.user_id.name" class="col-xs-3">
-									<strong>Salesperson:</strong>
-									<p t-field="o.user_id" />
-								</div>
-
-							</div>
-
-							<table class="table table-condensed">
-								<thead>
-									<tr style="background-color:lightgray;">
-										<th>Index</th>
-										<th>Description</th>
-										<th>Taxes</th>
-										<th class="text-right">Quantity</th>
-										<th class="text-right">Unit Price</th>
-										<th groups="sale.group_discount_per_so_line">Disc.(%)</th>
-										<th class="text-right">Price</th>
-									</tr>
-								</thead>
-								<tbody class="sale_tbody">
-
-									<!-- <t t-set="i" t-value="1"/> -->
-
-
-									<tr t-foreach="o.order_line" t-as="l">
-
-										<!-- <td> <span t-esc="i"/> </td> -->
-										<td>
-											<span t-esc="get_index(o)" />
-										</td>
-
-										<td>
-											<span t-field="l.name" />
-										</td>
-										<td>
-
-										</td>
-										<td class="text-right">
-											<span t-field="l.product_uom_qty" />
-											<span t-field="l.product_uom" />
-										</td>
-										<td class="text-right">
-											<span t-field="l.price_unit" />
-										</td>
-										<td>
-											<span t-field="l.discount" />
-										</td>
-										<!-- <t t-set="i" t-value="i+1"/> -->
-
-									</tr>
-
-								</tbody>
-							</table>
-
-							<div class="row">
-								<div class="col-xs-4 pull-right">
-									<table class="table">
-										<tr class="border-black">
-											<td>
-												<strong>Total Without Taxes</strong>
-											</td>
-											<td class="text-right">
-												<span t-field="o.amount_untaxed" />
-											</td>
-										</tr>
-										<tr>
-											<td>Taxes</td>
-											<td class="text-right">
-												<span t-field="o.amount_tax" />
-											</td>
-										</tr>
-										<tr class="border-black">
-											<td>
-												<strong>Total</strong>
-											</td>
-											<td class="text-right">
-												<span t-field="o.amount_total" />
-											</td>
-										</tr>
-									</table>
-								</div>
-							</div>
-
-						</div>
-					</div>
-				</div>
-
-			</t>
-			
+			<xpath expr="//table[@class='table table-condensed']//thead//tr"
+				position="replace">
+				<tr style="background-color:lightgray;">
+					<th>Description</th>
+					<th class="text-right">Price</th>
+				</tr>
+			</xpath>
+			<xpath expr="//tbody[@class='sale_tbody']//tr//td[4]" position="replace">
+			<th>first</th>
+			</xpath>
+			<xpath expr="//tbody[@class='sale_tbody']//tr//td[3]" position="replace">
+			<th >second</th>
+			</xpath>
+			<xpath expr="//tbody[@class='sale_tbody']//tr//td[2]" position="replace">
+			<th>third</th>
+			</xpath>
 		</template>
 
 	</data>
