create print button in res.student model

--- a/report/qweb_report.xml
+++ b/report/qweb_report.xml
@@ -3,7 +3,7 @@
  	<data>
 		<report 
     		id="qweb_report"
-    		model="sale.order"
+    		model="res.student"
     		string="Product Detail"
     		report_type="qweb-pdf"
     		name="student.qweb_report_demo"
