create from date to Todate all report print thorugh wizard

--- a/view/qweb_report_demo.xml
+++ b/view/qweb_report_demo.xml
@@ -11,8 +11,8 @@
 
 						<div class="oe_structure">
 							<div class="row">
+								<span t-esc="data"/>
 								<span>print</span>
-
 							</div>
 					</div>
 				</div>
